--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,52 @@
-<h1>
-  {{title}}
-</h1>
+<header>
+  <h1>
+    {{title}}
+  </h1>
+</header>
+<main>
+  <section class="create_student">
+    <h2>Create student record</h2>
+    <form class="create_student_form" action="create">
+      <input type="text" placeholder="Name" #studentName />
+      <input type="text" placeholder="Surname" #studentSurname />
+      <input type="date" placeholder="Birthday" #birth />
+      <input type="tel" placeholder="Phone number" #phone />
+      <input type="email" placeholder="E-mail address" #email />
+      <input type="submit" value="Add">
+    </form>
+  </section>
+  <section class="list_of_students" *ngIf="students.length">
+    <h2>Students record list</h2>
+    <table class="students_list_table">
+      <thead>
+        <tr>
+          <td>Id</td>
+          <td>Name</td>
+          <td>Surname</td>
+          <td>Date of birth</td>
+          <td>Phone</td>
+          <td>Email</td>
+          <td>Registration date</td>
+          <td>Last changes</td>
+          <td></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="student_record" *ngFor="let student of students">
+          <td>{{student.id}}</td>
+          <td>{{student.name.first_name}}</td>
+          <td>{{student.name.last_name}}</td>
+          <td>{{student.birth_date}}</td>
+          <td>{{student.phone}}</td>
+          <td>{{student.email}}</td>
+          <td>{{student.created}}</td>
+          <td>{{student.changed}}</td>
+          <td>
+            <input type="button" value="Delete">
+            <input type="button" value="Change">
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+</main>
