--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,13 @@
 <main>
   <section class="create_student">
     <h2>Create student record</h2>
-    <form class="create_student_form" action="create">
+    <form class="create_student_form">
       <input type="text" placeholder="Name" #studentName />
       <input type="text" placeholder="Surname" #studentSurname />
       <input type="date" placeholder="Birthday" #birth />
       <input type="tel" placeholder="Phone number" #phone />
       <input type="email" placeholder="E-mail address" #email />
-      <input type="submit" value="Add">
+      <input type="submit" value="Add" (click)="create($event, studentName.value, studentSurname.value, birth.value, phone.value, email.value)">
     </form>
   </section>
   <section class="list_of_students" *ngIf="students.length">
@@ -34,16 +34,16 @@
       <tbody>
         <tr class="student_record" *ngFor="let student of students">
           <td>{{student.id}}</td>
-          <td>{{student.name.first_name}}</td>
-          <td>{{student.name.last_name}}</td>
+          <td>{{student.first_name}}</td>
+          <td>{{student.last_name}}</td>
           <td>{{student.birth_date}}</td>
           <td>{{student.phone}}</td>
           <td>{{student.email}}</td>
           <td>{{student.created}}</td>
           <td>{{student.changed}}</td>
           <td>
-            <input type="button" value="Delete">
-            <input type="button" value="Change">
+            <input type="button" (click)="delete(student)" value="Delete">
+            <input type="button" (click)="change(student)" value="Change">
           </td>
         </tr>
       </tbody>
