--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,10 @@ header {
   padding: 20px 0 20px 100px;
   border-bottom: 2px solid darkgrey;
 }
+form input {
+  height: 20px;
+  padding: 1px 5px;
+}
 .create_student .create_student_form {
   border: 1px solid darkgrey;
   width: 450px;
@@ -36,5 +40,4 @@ main section {
   display: block;
   margin: 5px;
   width: 60px;
-  border-radius: 5px;
 }
