--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,8 @@
 <header>
-  <h1>
-    {{title}}
-  </h1>
+  <h1> {{title}} </h1>
 </header>
 <main>
   <app-add-form></app-add-form>
   <app-change-form></app-change-form>
   <app-students-list></app-students-list>
-  
 </main>
