--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,40 +4,19 @@ header {
   padding: 20px 0 20px 100px;
   border-bottom: 2px solid darkgrey;
 }
-form input {
-  height: 20px;
-  padding: 1px 5px;
-}
-.create_student .create_student_form {
-  border: 1px solid darkgrey;
-  width: 450px;
-}
-.create_student .create_student_form input{
-  display: block;
-  margin: 10px 20px;
-}
+
 main {
+  width: 1024px;
+  margin: auto;
+  display: flex;
   padding: 0 20px;
-}
-main section {
-  border-bottom: 2px solid rgb(212, 212, 212);
-  padding-bottom: 20px; 
-}
-
-.students_list_table {
-  border: 1px solid darkgrey;
-  padding: 10px 5px;
-  border-radius: 5px;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
 }
 
-.students_list_table td {
-  border: 1px dotted rgb(32, 32, 32);
-  padding: 5px;
-  text-align: center;
-}
-
-.students_list_table .student_record td input[type="button"] {
-  display: block;
-  margin: 5px;
-  width: 60px;
+app-add-form,
+app-change-form,
+app-students-list {
+  width: 100%;
 }
