--- a/src/app/students/student-item/student-item.component.html
+++ b/src/app/students/student-item/student-item.component.html
@@ -1,3 +1,14 @@
-<p>
-  student-item works!
-</p>
+<tr class="student_record">
+  <td>{{student.id}}</td>
+  <td>{{student.first_name}}</td>
+  <td>{{student.last_name}}</td>
+  <td>{{student.birth_date}}</td>
+  <td>{{student.phone}}</td>
+  <td>{{student.email}}</td>
+  <td>{{student.created}}</td>
+  <td>{{student.changed}}</td>
+  <td>
+    <input type="button" (click)="onDelete()" value="Delete">
+    <input type="button" (click)="onChange()" value="Change">
+  </td>
+</tr>
